# rHashGen

./: .Rhistory  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build_test.yml
app/: avalanche.cpp  badavalanche.cpp  brutforce.cpp  example.cpp  search.cpp
data/: best_32bits.txt  hash_loading.txt  opti_fraction_s.txt  results_8b_3o.txt  tests_8b_6o.txt  thomas_wang.txt
data_exploration/: hash_functions.cpp  hash_functions_rcpp.cpp  read.R
expes/: build.sh  plot.py
expes/32bits_sample-test_HC-rand-init/: 2024-11-26_expe__32bits_sample-test_HC-rand-init.status  run.sh
expes/32bits_sample-test_HC-rand-init_mult-step100/: 2024-11-26_expe__32bits_sample-test_HC-rand-init.status  README.md  run.sh
expes/32bits_sample-test_HC-rand-init_no-mult/: 2024-11-26_expe__32bits_sample-test_HC-rand-init.status  run.sh
expes/8bits_full-test_HC-rand-init/: 2024-11-26_expe__8bits_full-test_HC-rand-init.status  plot.py  run.sh
src/: CMakeLists.txt  log.cpp
src/include/: AddShift.hpp  AvalancheTest.hpp  EvalFunc.hpp  HashFunction.hpp  Masking.hpp  Multiply.hpp  Operator.hpp  XorLeftShift.hpp  XorRightShift.hpp  log.h  moCombination.hpp  moCombinationNeighbor.hpp  moCombinationNeighborhood.hpp
test/: AddShift_T.cpp  CMakeLists.txt  EvalFull_T.cpp  EvalMO_T.cpp  Hash_T.cpp  Masking_T.cpp  Multiply_T.cpp  XorLeftShift_T.cpp  XorRightShift_T.cpp  moCombinationNeighbor_T.cpp  moCombinationNeighborhood_T.cpp  moCombination_T.cpp
